outputs/generated_env/kubernetes/network_policies/cybersim-zone-b-allow-grafana-to-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-grafana-to-prometheus
  namespace: cybersim-zone-b
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-zone-a
      podSelector:
        matchLabels:
          app.kubernetes.io/name: grafana
    ports:
    - port: 9090
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
  policyTypes:
  - Ingress
